# moveit-panda-python

./: CMakeLists.txt  README.md  package.xml
config/: moveit_demo.rviz
launch/: pick-and-place.launch
scripts/: panda_pick_and_place.py
